compound model added - a weird bug exists

--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(test_dm_em test_dm_em.cc)
 add_executable(test_pg test_pg.cc)
 add_executable(test_pg_em test_pg_em.cc)
 
+add_executable(test_comp test_comp.cc)
 
