--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -3,6 +3,8 @@ include_directories(../include)
 link_libraries(gsl)
 link_libraries(gslcblas)
 
+add_executable(test_bcpm test_bcpm.cc)
+
 add_executable(test_dm test_dm.cc)
 add_executable(test_dm_em test_dm_em.cc)
 
