--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -11,7 +11,9 @@ add_executable(test_dm_em test_dm_em.cc)
 add_executable(test_pg test_pg.cc)
 add_executable(test_pg_em test_pg_em.cc)
 
-add_executable(test_comp ../old/test_comp.cc)
+add_executable(test_old_comp ../old/test_comp.cc)
+
+add_executable(test_comp test_comp.cc)
 
 add_executable(test_old_bcpm test_old_bcpm.cc)
 
